# exodus

./: README.md  io.outlaw.exodus.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.outlaw.exodus.json/: init
.flatpak-builder/checksums/: x86_64-io.outlaw.exodus.json
data/: io.outlaw.exodus.appdata.xml.in  io.outlaw.exodus.desktop.in  io.outlaw.exodus.gschema.xml  meson.build
data/icons/: meson.build
docs/: model.gaphor
po/: POTFILES  exodus.pot  meson.build
src/: exodus-application.c  exodus-application.h  exodus-window.c  exodus-window.h  exodus-window.ui  exodus.gresource.xml  main.c  meson.build
src/testing/: poll.c
